--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -11,30 +11,30 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🚀 **Effortless Setup**: Install seamlessly using Docker or Kubernetes (`kubectl`, `kustomize` or `helm`) for a hassle-free experience with support for both `:ollama` and `:cuda` tagged images.
 
-- 🤝 **OpenAI API Integration**: Effortlessly integrate OpenAI-compatible APIs for versatile conversations alongside Ollama models. Customize the OpenAI API URL to link with `LMStudio`, `GroqCloud`, `Mistral`, `OpenRouter`, **and more**.
+- 🤝 **OpenAI API Integration**: Effortlessly integrate OpenAI-compatible APIs for versatile conversations alongside Ollama models. The OpenAI API URL can be customized to link with various third-party applications, including `LMStudio`, `GroqCloud`, `Mistral`, `OpenRouter`, **and more**.
 
-- 📱 **Responsive Design**: Enjoy a seamless experience across Desktop PC, Laptop, and Mobile devices.
+- 📱 **Responsive Design**: Enjoy a seamless experience across desktop PCs, laptops, and mobile devices.
 
-- 📱 **Progressive Web App for Mobile**: Enjoy a native progressive web app experience on your mobile device, featuring offline access on localhost or a personal domain, and a smooth user interface. For our PWA to be installable on your device, it must be served in a secure context. This usually means that it must be served over HTTPS.
-  - To set up a PWA, you'll need some understanding of technologies like Linux, Docker, and reverse proxies such as `Nginx`, `Caddy`, or `Traefik`. Using these tools can help streamline the process for creating and deploying your PWA tailored to your needs. And while there isn't a "one-click install" option available and your available option for serving your Open WebUI instance securely over HTTPS takes user-experience, using these resources can make it easier to create and deploy a PWA tailored to your needs.
+- 📱 **Progressive Web App for Mobile**: Enjoy a native progressive web application experience on your mobile device with offline access on `localhost` or a personal domain, and a smooth user interface. In order for our PWA to be installable on your device, it must be delivered in a secure context. This usually means that it must be served over HTTPS.
+  - To set up a PWA, you'll need some understanding of technologies like Linux, Docker, and reverse proxies such as `Nginx`, `Caddy`, or `Traefik`. Using these tools can help streamline the process of building and deploying a PWA tailored to your needs. While there's no "one-click install" option available, and your available option to securely deploy your Open WebUI instance over HTTPS requires user experience, using these resources can make it easier to create and deploy a PWA tailored to your needs.
 
 - ✒️🔢 **Full Markdown and LaTeX Support**: Elevate your LLM experience with comprehensive Markdown and LaTeX capabilities for enriched interaction.
 
 - 🧩 **Model Builder**: Easily create Ollama models directly from Open WebUI. Create and add custom characters/agents, customize chat elements, and import models effortlessly through [Open WebUI Community](https://openwebui.com/) integration.
 
-- 📚 **Local and Remote RAG Integration**: Dive into the future of chat interactions with groundbreaking Retrieval Augmented Generation (RAG) with document interactions in your chat. Load documents or add files to your library, then access them using `#` before a query, or start your prompt with `#`, followed by a URL for web content integration. 
+- 📚 **Local and Remote RAG Integration**: Dive into the future of chat interactions and explore your documents with our cutting-edge Retrieval Augmented Generation (RAG) technology with in your chats. Documents can be loaded into the workspace area, after which they can be accessed using the `#` symbol before a query, or by starting the prompt with `#`, followed by a URL for web content integration. 
 
-- 🔍 **Web Search for RAG**: Perform web searches using providers like `Brave Search`, `DuckDuckGo`, `Google Programmatic Search Engine`, `Serpstack`, `Serper`, `Serply`, `SearXNG`, and `Tavily`, and inject the results directly into your local Retrieval Augmented Generation (RAG) experience.
+- 🔍 **Web Search for RAG**: You can perform web searches using various providers such as `Brave Search`, `DuckDuckGo`, `Google Programmatic Search Engine`, `Serpstack`, `Serper`, `Serply`, `SearXNG`, and `Tavily`, to inject the results directly into your local Retrieval Augmented Generation (RAG) experience.
 
-- 🌐 **Web Browsing Capabilities**: Seamlessly integrate websites into your chat experience using the `#` command followed by a URL. This feature allows you to incorporate web content directly into your conversations, enhancing the richness and depth of your interactions.
+- 🌐 **Web Browsing Capabilities**: Integrate websites seamlessly into your chat experience by using the `#` command followed by a URL. This feature enables the incorporation of web content directly into your conversations, thereby enhancing the richness and depth of your interactions.
 
 - 🎨 **Image Generation Integration**: Seamlessly incorporate image generation capabilities using options such as AUTOMATIC1111 API or ComfyUI (`local`), and OpenAI's DALL-E (`external`), enriching your chat experience with dynamic visual content.
 
-- ⚙️ **Concurrent Model Utilization**: Effortlessly engage with multiple models simultaneously, harnessing their unique strengths for optimal responses. Enhance your experience by leveraging a diverse set of model modalities in parallel.
+- ⚙️ **Concurrent Model Utilization**: Effortlessly engage with multiple models simultaneously, harnessing their unique strengths for optimal responses. Leverage a diverse set of model modalities in parallel to enhance your experience.
 
-- 🔐 **Role-Based Access Control (RBAC)**: Ensure secure access with restricted permissions; only authorized individuals can access your Ollama, and exclusive model creation/pulling rights are reserved for administrators.
+- 🔐 **Role-Based Access Control (RBAC)**: Ensure secure access with restricted permissions;. Only authorized individuals can access your Ollama, while model creation and pulling rights are exclusively reserved for administrators.
 
-- 🌐🌍 **Multilingual Support**: Experience Open WebUI in your preferred language with our internationalization (`i18n`) support. Join us in expanding our supported languages! We're actively seeking contributors!
+- 🌐🌍 **Multilingual Support**: Experience Open WebUI in your preferred language with our internationalization (`i18n`) support. We invite you to join us in expanding our supported languages! We're actively seeking contributors!
 
 - 🌟 **Continuous Updates**: We are committed to improving Open WebUI with regular updates, fixes, and new features.
 
@@ -44,31 +44,32 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ### 🔧 Pipelines Support
 
-- 🔧 **Pipelines Framework**: Seamlessly integrate and customize your Open WebUI experience with our modular plugin framework for enhanced customization and functionality (https://github.com/open-webui/pipelines). Easily add custom logic and integrate Python libraries, from AI agents to home automation APIs.
+- 🔧 **Pipelines Framework**: Seamlessly integrate and customize your Open WebUI experience with our modular plugin framework for enhanced customization and functionality (https://github.com/open-webui/pipelines). Our framework allows for the easy addition of custom logic and integration of Python libraries, from AI agents to home automation APIs.
 
-- 📥 **Upload Pipeline**: Directly upload pipelines from `Admin Panel` > `Settings` > `Pipelines` section, streamlining the pipeline management process.
+- 📥 **Upload Pipeline**: Pipelines can be uploaded directly from the `Admin Panel` > `Settings` > `Pipelines` section, streamlining the pipeline management process.
 
-#### The possibilities with our Pipelines framework knows no bounds. Start with a few pre-built pipelines to help you get started!
+#### The possibilities with our Pipelines framework knows no bounds and are practically limitless. Start with a few pre-built pipelines to help you get started!
 
-- 🔗 **Function Calling**: Integrate [Function Calling](https://github.com/open-webui/pipelines/blob/main/examples/filters/function_calling_filter_pipeline.py) seamlessly through Pipelines and enhance your LLM interactions with advanced functiol calling capabilities .
+- 🔗 **Function Calling**: Integrate [Function Calling](https://github.com/open-webui/pipelines/blob/main/examples/filters/function_calling_filter_pipeline.py) seamlessly through Pipelines to enhance your LLM interactions with advanced function calling capabilities.
 
-- 📚 **Custom RAG**: Seamlessly integrate a [custom Retrieval Augmented Generation (RAG)](https://github.com/open-webui/pipelines/tree/main/examples/pipelines/rag) pipeline to enhance your LLM interactions with custom RAG logic.
+- 📚 **Custom RAG**: Integrate a [custom Retrieval Augmented Generation (RAG)](https://github.com/open-webui/pipelines/tree/main/examples/pipelines/rag) pipeline seamlessly to enhance your LLM interactions with custom RAG logic.
 
-- 📊 **Message Monitoring with Langfuse**: Monitor and analyze message interactions in real-time usage statistics via our [Langfuse](https://github.com/open-webui/pipelines/blob/main/examples/filters/langfuse_filter_pipeline.py) pipeline.
+- 📊 **Message Monitoring with Langfuse**: Monitor and analyze message interactions in real-time usage statistics via [Langfuse](https://github.com/open-webui/pipelines/blob/main/examples/filters/langfuse_filter_pipeline.py) pipeline.
 
-- ⚖️ **User Rate Limiting**: Manage API usage efficiently by controlling the flow of requests sent to LLMs to prevent exceeding rate limits with out [Rate Limit](https://github.com/open-webui/pipelines/blob/main/examples/filters/rate_limit_filter_pipeline.py) pipeline.
+- ⚖️ **User Rate Limiting**: Manage API usage efficiently by controlling the flow of requests sent to LLMs to prevent exceeding rate limits with [Rate Limit](https://github.com/open-webui/pipelines/blob/main/examples/filters/rate_limit_filter_pipeline.py) pipeline.
 
-- 🌍 **Real-Time LibreTranslate Translation**: Seamlessly integrate real-time translations into your LLM interactions using [LibreTranslate](https://github.com/open-webui/pipelines/blob/main/examples/filters/libretranslate_filter_pipeline.py), enabling cross-lingual communication. This pipeline requires further setup with LibreTranslate in a Docker container to work.
+- 🌍 **Real-Time LibreTranslate Translation**: Integrate real-time translations into your LLM interactions using [LibreTranslate](https://github.com/open-webui/pipelines/blob/main/examples/filters/libretranslate_filter_pipeline.py) pipeline, enabling cross-lingual communication.
+ - Please note that this pipeline requires further setup with LibreTranslate in a Docker container to work.
 
-- 🛡️ **Toxic Message Filtering**: Automatically filter out toxic messages to maintain a safe environment with our [Detoxify](https://github.com/open-webui/pipelines/blob/main/examples/filters/detoxify_filter_pipeline.py) pipeline.
+- 🛡️ **Toxic Message Filtering**: Our [Detoxify](https://github.com/open-webui/pipelines/blob/main/examples/filters/detoxify_filter_pipeline.py) pipeline automatically filters out toxic messages to maintain a clean and safe chat environment.
 
-- 🔒 **LLM-Guard**: Ensure secure LLM interactions with our [LLM-Guard](https://github.com/open-webui/pipelines/blob/main/examples/filters/llmguard_prompt_injection_filter_pipeline.py) pipeline, featuring a Prompt Injection Scanner that detects and mitigates crafty input manipulations targeting large language models, protecting your LLMs for prevention of data leakage and adds a layer of resistance against prompt injection attacks.
+- 🔒 **LLM-Guard**: Ensure secure LLM interactions with [LLM-Guard](https://github.com/open-webui/pipelines/blob/main/examples/filters/llmguard_prompt_injection_filter_pipeline.py) pipeline, featuring a Prompt Injection Scanner that detects and mitigates crafty input manipulations targeting large language models. This protects your LLMs from data leakage and adds a layer of resistance against prompt injection attacks.
 
-- 🕒 **Conversation Turn Limits**: Manage interactions better by setting limits on conversation turns with our [Conversation Turn Limit](https://github.com/open-webui/pipelines/blob/main/examples/filters/conversation_turn_limit_filter.py) pipeline.
+- 🕒 **Conversation Turn Limits**: Improve interaction management by setting limits on conversation turns with [Conversation Turn Limit](https://github.com/open-webui/pipelines/blob/main/examples/filters/conversation_turn_limit_filter.py) pipeline.
 
-- 📈 **OpenAI Generation Stats**: Access detailed generation statistics for OpenAI models with our [OpenAI](https://github.com/open-webui/pipelines/blob/main/examples/pipelines/providers/openai_manifold_pipeline.py) pipeline.
+- 📈 **OpenAI Generation Stats**: Our [OpenAI](https://github.com/open-webui/pipelines/blob/main/examples/pipelines/providers/openai_manifold_pipeline.py) pipeline provides detailed generation statistics for OpenAI models.
 
-- **🚀 Multi-Model Support**: Seamlessly integrate with various AI models from providers like OpenAI, Cohere, Google, and more, expanding your possibilities with a wide range of language models! (https://github.com/open-webui/pipelines/tree/main/examples/pipelines/providers)
+- **🚀 Multi-Model Support**: Our seamless integration with various AI models from providers like `OpenAI`, `Cohere`, `Google`, [and more](https://github.com/open-webui/pipelines/tree/main/examples/pipelines/providers) expands your possibilities with a wide range of language models to select from and interact with.
 
 #### In addition to the extensive features and customization options, we also provide [a library of example pipelines ready to use](https://github.com/open-webui/pipelines/tree/main/examples) along with [a practical example scaffold pipeline](https://github.com/open-webui/pipelines/blob/main/examples/scaffolds/example_pipeline_scaffold.py) to help you get started. These resources will streamline your development process and enable you to quickly create powerful LLM interactions using Pipelines and Python. Happy coding! 💡
 
@@ -76,29 +77,29 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ### 🖥️ User Experience
 
-- 🖥️ **Intuitive Interface**: Our chat interface takes inspiration from ChatGPT user interface, ensuring a user-friendly experience.
+- 🖥️ **Intuitive Interface**: The chat interface has been designed with the user in mind, drawing inspiration from the user interface of ChatGPT.
 
 - ⚡ **Swift Responsiveness**: Enjoy reliably fast and responsive performance.
 
 - 🎨 **Splash Screen**: A simple loading splash screen for a smoother user experience.
 
-- 📦 **Pip Install Method**: Install Open WebUI using `pip install open-webui`, simplifying the installation process and making it even easier for newcomers to get started. [Find out more here](https://pypi.org/project/open-webui/).
+- 📦 **Pip Install Method**: Installation of Open WebUI can be accomplished via the command `pip install open-webui`, which streamlines the process and makes it more accessible to new users. For further information, please visit: https://pypi.org/project/open-webui/.
 
-- 🌈 **Theme Customization**: Personalize your Open WebUI experience with a range of options, including a variety of solid, yet sleek themes, customizable chat background images, and three mode options: Light, Dark, or OLED Dark mode - or let your *Her* choose for you!
+- 🌈 **Theme Customization**: Personalize your Open WebUI experience with a range of options, including a variety of solid, yet sleek themes, customizable chat background images, and three mode options: Light, Dark, or OLED Dark mode - or let *Her* choose for you! ;)
 
-- 💻 **Code Syntax Highlighting**: Enjoy enhanced code readability with our syntax highlighting feature.
+- 💻 **Code Syntax Highlighting**: Our syntax highlighting feature enhances code readability, providing a clear and concise view of your code.
 
-- ↕️ **Bi-Directional Chat Support**: Easily switch between left-to-right and right-to-left chat directions to accommodate various language preferences.
+- ↕️ **Bi-Directional Chat Support**: You can easily switch between left-to-right and right-to-left chat directions to accommodate various language preferences.
 
-- 📱 **Mobile Accessibility**: Seamlessly open and close the sidebar on mobile devices with intuitive swipe gestures.
+- 📱 **Mobile Accessibility**: The sidebar can be opened and closed on mobile devices with a simple swipe gesture.
 
-- 📂 **Unified Workspace**: Access all your model files, prompts, documents, tools, and functions in one convenient location, streamlining your workflow.
+- 📂 **Unified Workspace**: A unified workspace section provides access to all your model files, prompts, documents, tools, and functions in one convenient location, streamlining your workflow.
 
-- 💾 **Persistent Settings**: Enjoy the convenience of saved and persistent settings within Open WebUI, stored in a config.json file for easy access and reuse.
+- 💾 **Persistent Settings**: Benefit from the convenience of saved and persistent settings within Open WebUI, stored in a config.json file for easy access and reuse.
 
-- ❓ **Quick Access to Documentation & Shortcuts**: Easily access Open WebUI documentation page and view available keyboard shortcuts easily via a question mark button located at the bottom right-hand corner of the main UI screen (available on larger screens like PCs).
+- ❓ **Quick Access to Documentation & Shortcuts**: The question mark button located at the bottom right-hand corner of the main UI screen (available on larger screens like PCs) provides users with easy access to the Open WebUI documentation page and available keyboard shortcuts.
 
-- 📜 **Changelog & Check for Updates**: Access a comprehensive changelog and check for updates in `Settings` > `About` > `See What's New`, providing a quick overview of the latest features, improvements, and bug fixes.
+- 📜 **Changelog & Check for Updates**: Users can access a comprehensive changelog and check for updates in `Settings` > `About` > `See What's New`, which provides a quick overview of the latest features, improvements, and bug fixes, as well as the ability to check for updates.
 
 ---
 
@@ -110,28 +111,28 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🤖 **Multiple Model Support**: Seamlessly switch between different models for diverse chat interactions.
 
-- ⚙️ **Fine-Tuned Control with Advanced Parameters**: Gain a deeper level of control by adjusting model parameters such as `seed`, `temperature`, `frequency penalty`, `context length`, `seed`, and more to define your system prompts, bending the conversation to your specific preferences and needs.
+- ⚙️ **Fine-Tuned Control with Advanced Parameters**: Gain a deeper level of control by adjusting model parameters such as `seed`, `temperature`, `frequency penalty`, `context length`, `seed`, and more to define your system prompts, allowing you to bend the conversation to your specific preferences and needs.
 
 - 🏷️ **Conversation Tagging**: Effortlessly categorize and locate tagged chats for quick reference and streamlined data collection.
 
-- 👶 **Chat Cloning**: Easily clone and save a snapshot of any chat for future reference or continuation. This feature makes it easy to pick up where you left off or share your session with others. Simply click on the `Clone` button in the dropdown menu of your chat to create a copy of your chat. Can you keep up with your clones?
+- 👶 **Chat Cloning**: Easily clone and save a snapshot of any chat for future reference or continuation. This feature makes it easy to pick up where you left off or share your session with others. To create a copy of your chat, simply click on the `Clone` button in the dropdown menu. Can you keep up with your clones?
 
-- 📜 **Prompt Preset Support**: Instantly access custom preset prompts using the `/` command in the chat input. Load predefined conversation starters effortlessly and expedite your interactions. Effortlessly import prompts through [Open WebUI Community](https://openwebui.com/) integration or create your own!
+- 📜 **Prompt Preset Support**: Instantly access custom preset prompts using the `/` command in the chat input. Load predefined conversation starters effortlessly and expedite your interactions. Import prompts with ease through [Open WebUI Community](https://openwebui.com/) integration or create your own!
 
-- 📅 **Prompt Variables Support**: Prompt variables such as `{{CURRENT_DATE}}`, `{{CURRENT_DATETIME}}`, `{{CURRENT_TIME}}`, `{{USER_NAME}}`, and `{{USER_LOCATION}}` can be utilized in the system prompt.
-  - `{{USER_LOCATION}}` prompt variable requires a secure connection over HTTPS. Ensure `{{USER_LOCATION}}` is toggled on from `Settings` > `Interface` to utilize this particular prompt varibale.
+- 📅 **Prompt Variables Support**: Utilize prompt variables such as `{{CURRENT_DATE}}`, `{{CURRENT_DATETIME}}`, `{{CURRENT_TIME}}`, `{{USER_NAME}}`, and `{{USER_LOCATION}}` can be utilized in the system prompt.
+  - Please note that the `{{USER_LOCATION}}` prompt variable requires a secure connection over HTTPS. To utilize this particular prompt variable, please ensure that `{{USER_LOCATION}}` is toggled on from `Settings` > `Interface`.
 
 - 🔒 **Toggle Chat History**: Toggle chat history in `Settings` > `Chats` to prevent chat history from being created with new interactions when toggled off.
 
-- ⬆️ **GGUF File Model Creation**: Effortlessly create Ollama models by uploading GGUF files directly from Open WebUI from `Admin Settings` > `Settings` > `Model` > `Experimental`. Streamlined process with options to upload from your machine or download GGUF files from Hugging Face.
+- ⬆️ **GGUF File Model Creation**: Effortlessly create Ollama models by uploading GGUF files directly from Open WebUI from `Admin Settings` > `Settings` > `Model` > `Experimental`. The process has been streamlined with the option to upload from your machine or download GGUF files from Hugging Face.
 
 - 🧠 **Memory Feature**: Manually add information you want your LLMs to remember via `Settings` > `Personalization` > `Memory`. Memories can be added, edited, and deleted.
 
-- 📜 **Citations in RAG Feature**: Easily track the context from documents fed to LLMs with added citations for reference points via the Retrieval Augmented Generation (RAG) feature.
+- 📜 **Citations in RAG Feature**: The Retrieval Augmented Generation (RAG) feature allows users to easily track the context of documents fed to LLMs with added citations for reference points.
 
 - 🌟 **Enhanced RAG Pipeline**: A togglable hybrid search sub-feature for our RAG embedding feature that enhances the RAG functionality via `BM25`, with re-ranking powered by `CrossEncoder`, and configurable relevance score thresholds.
 
-- 📹 **YouTube RAG Pipeline**: Dedicated Retrieval Augmented Generation (RAG) pipeline for summarizing YouTube videos via video URLs, enabling smooth interaction with video transcriptions directly.
+- 📹 **YouTube RAG Pipeline**: The dedicated Retrieval Augmented Generation (RAG) pipeline for summarizing YouTube videos via video URLs enables smooth interaction with video transcriptions directly.
 
 ---
 
