--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -22,7 +22,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🧩 **Model Builder**: Easily create Ollama models directly from Open WebUI. Create and add custom characters/agents, customize chat elements, and import models effortlessly through [Open WebUI Community](https://openwebui.com/) integration.
 
-- 📚 **Local and Remote RAG Integration**: Dive into the future of chat interactions and explore your documents with our cutting-edge Retrieval Augmented Generation (RAG) technology with in your chats. Documents can be loaded into the workspace area, after which they can be accessed using the `#` symbol before a query, or by starting the prompt with `#`, followed by a URL for web content integration. 
+- 📚 **Local and Remote RAG Integration**: Dive into the future of chat interactions and explore your documents with our cutting-edge Retrieval Augmented Generation (RAG) technology within your chats. Documents can be loaded into the workspace area, after which they can be accessed using the `#` symbol before a query, or by starting the prompt with `#`, followed by a URL for web content integration. 
 
 - 🔍 **Web Search for RAG**: You can perform web searches using various providers such as `Brave Search`, `DuckDuckGo`, `Google Programmatic Search Engine`, `Serpstack`, `Serper`, `Serply`, `SearXNG`, and `Tavily`, to inject the results directly into your local Retrieval Augmented Generation (RAG) experience.
 
@@ -139,66 +139,66 @@ import { TopBanners } from "@site/src/components/TopBanners";
 ### 💻 Model Management
 
 
-- 🛠️ **Model Builder**: Build and edit all models with a persistent model builder mode within the models workspace.
+- 🛠️ **Model Builder**: All models can be built and edited with a persistent model builder mode within the models workspace.
 
-- 📚 **Knowledge Support for Models**: Attach functions and documents directly to models from the models workspace, enhancing the information available to each model.
+- 📚 **Knowledge Support for Models**: The ability to attach functions and documents directly to models from the models workspace enhances the information available to each model.
 
-- 🗂️ **Model Presets**: Create and manage model presets for both Ollama/OpenAI API.
+- 🗂️ **Model Presets**: Create and manage model presets for both the Ollama/OpenAI API.
 
-- 🏷️ **Model Tagging**: Organize models in the models workspace with tagging.
+- 🏷️ **Model Tagging**: The models workspace enables users to organize their models using tagging.
 
-- 📋 **Model Selector Dropdown Ordering**: Effortlessly organize models by dragging and dropping them into desired positions within the models workspace, reflecting it's changes in the model dropdown menu.
+- 📋 **Model Selector Dropdown Ordering**: Models can be effortlessly organized by dragging and dropping them into desired positions within the model workspace, which will then reflect the changes in the model dropdown menu.
 
 - 🔍 **Model Selector Dropdown**: Easily find and select your models with an included search filter and detailed model information with model tags and model descriptions.
 
-- 👥 **'@' Model Integration**: Harness the collective intelligence of multiple models in a single chat by seamlessly switching to any accessible local or external model during conversations by using the `@` command to specify the model by name.
+- 👥 **'@' Model Integration**: By seamlessly switching to any accessible local or external model during conversations, users can harness the collective intelligence of multiple models in a single chat. This can done by using the `@` command to specify the model by name within a chat.
 
 - 🔄 **Seamless Integration**: Copy any `ollama run {model:tag}` CLI command directly from a model's page on [Ollama library](https://ollama.com/library/) and paste it into the model dropdown to easily select and pull models.
 
-- 🗂️ **Create Ollama Modelfile**: Create a modelfile for Ollama in `Admin Panel` > `Settings` > `Models` > `Create a model`, making it easier to manage your models.
+- 🗂️ **Create Ollama Modelfile**: To create a model file for Ollama, navagate to the `Admin Panel` > `Settings` > `Models` > `Create a model`.
 
-- ⚙️ **Default Model Setting**: Easily set the default model in `Settings` > `Interface` for mobile devices, or set it easily in a new chat under the model selector dropdown on PCs.
+- ⚙️ **Default Model Setting**: The default model can be set in `Settings` > `Interface` for mobile devices, or be set easier in a new chat under the model selector dropdown on PCs.
 
-- 💡 **LLM Response Insights**: View generation details for every response, including external model API insights and comprehensive local model info.
+- 💡 **LLM Response Insights**: Details of every generated response can be viewed, including external model API insights and comprehensive local model info.
 
-- 📥🗑️ **Download/Delete Models**: Easily download or delete models directly from Open WebUI.
+- 📥🗑️ **Download/Delete Models**: Models can be downloaded or deleted directly from Open WebUI with ease.
 
-- 🔄 **Update All Ollama Models**: Easily update locally installed models all at once with a convenient button, streamlining model management.
+- 🔄 **Update All Ollama Models**: A convenient button allows users to update locally installed models in one operation, streamlining model management.
 
-- 🍻 **TavernAI Character Card Integration**: Experience enhanced visual storytelling with TavernAI Character Card Integration in our model builder. Seamlessly incorporate TavernAI character card PNGs directly into your model files, allowing for a more immersive and engaging user experience.
+- 🍻 **TavernAI Character Card Integration**: Experience enhanced visual storytelling with TavernAI Character Card Integration in our model builder. Users can seamlessly incorporate TavernAI character card PNGs directly into their model files, creating a more immersive and engaging user experience.
 
-- 🎲 **Model Playground (Beta)**: Try out models in a sandbox environment with the new model playground area (`beta`). Test and explore model capabilities and settings with ease before deploying them in a live chat environment.
+- 🎲 **Model Playground (Beta)**: Try out models in a sandbox environment with the new model playground area (`beta`), which enables users to test and explore model capabilities and settings with ease in a sandbox environment before deployment in a live chat environment.
 
 ---
 
 ### 👥 Collaboration
 
-- 🗨️ **Local Chat Sharing**: Generate and share chat links seamlessly between users, enhancing collaboration and communication.
+- 🗨️ **Local Chat Sharing**: Generate and share chat links between users in an efficient and seamless manner, thereby enhancing collaboration and communication.
 
-- 👍👎 **RLHF Annotation**: Empower your messages by rating them with thumbs up and thumbs down, followed by the option to provide textual feedback, facilitating the creation of datasets for Reinforcement Learning from Human Feedback (`RLHF`). Utilize your messages to train or fine-tune models, all while ensuring the confidentiality of locally saved data.
+- 👍👎 **RLHF Annotation**: Enhance the impact of your messages by rating them with either a thumbs up or thumbs down, followed by the option to provide textual feedback, facilitating the creation of datasets for Reinforcement Learning from Human Feedback (`RLHF`). Utilize your messages to train or fine-tune models, all while ensuring the confidentiality of locally saved data.
 
 - 🤝 **Community Sharing**: Share your chat sessions with the [Open WebUI Community](https://openwebui.com/) by clicking the `Share to Open WebUI Community` button. This feature allows you to engage with other users and collaborate on the platform.
-  - To use this feature, sign in to your Open WebUI Community account. Sharing your chats fosters a vibrant community, encourages knowledge sharing, and facilitates joint problem-solving. Community sharing of chat sessions is an optional feature, but only Admins can toggle this feature On/Off via `Admin Settings` > `Settings` > `General`.
+  - To utilize this feature, please sign in to your Open WebUI Community account. Sharing your chats fosters a vibrant community, encourages knowledge sharing, and facilitates joint problem-solving. Please note that community sharing of chat sessions is an optional feature. Only Admins can toggle this feature on or off via the `Admin Settings` > `Settings` > `General` menu.
 
 ---
 
 ### 📚 History & Archive
 
-- 📜 **Chat History**: Effortlessly access and manage your conversation history in the chat navagation sidebar.
+- 📜 **Chat History**: Access and manage your conversation history with ease via the chat navigation sidebar.
 
 - 🔄 **Regeneration History Access**: Easily revisit and explore your entire regeneration history.
 
 - 📬 **Archive Chats**: Effortlessly store away completed conversations you've had with models for future reference or interaction, maintaining a tidy and clutter-free chat interface.
 
-- 🗃️ **Archive All Chats**: Quickly archive all of your chats at once.
+- 🗃️ **Archive All Chats**: This feature allows you to quickly archive all of your chats at once.
 
-- 📦 **Export All Archived Chats as JSON**: Easily export all your archived chats in a single JSON file for easy backup or transfer.
+- 📦 **Export All Archived Chats as JSON**: This features enables users to easily export all their archived chats in a single JSON file, which can be used for backup or transfer purposes.
 
-- 📄 **Download Chats as JSON/PDF/TXT**: Easily download your chats individually in your choice of `.json`, `.pdf`, or `.txt` format.
+- 📄 **Download Chats as JSON/PDF/TXT**: Easily download your chats individually in your preffered format of `.json`, `.pdf`, or `.txt` format.
 
 - 📤📥 **Import/Export Chat History**: Seamlessly move your chat data in and out of the platform via `Import Chats` and `Export Chats` options.
 
-- 🗑️ **Delete All Chats**: Permanently delete all of your chats for a clean slate.
+- 🗑️ **Delete All Chats**: This option allows you to permanently delete all of your chats, ensuring a fresh start.
 
 ---
 
@@ -224,13 +224,13 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ### 🐍 Code Execution
 
-- 🚀 **Versatile, UI-Agnostic OpenAI-Compatible Plugin Framework**: Seamlessly integrate and customize [Open WebUI Pipelines](https://github.com/open-webui/pipelines) for efficient data processing and model training, ensuring ultimate flexibility and scalability.
+- 🚀 **Versatile, UI-Agnostic, OpenAI-Compatible Plugin Framework**: Seamlessly integrate and customize [Open WebUI Pipelines](https://github.com/open-webui/pipelines) for efficient data processing and model training, ensuring ultimate flexibility and scalability.
 
 -  🛠️ **Native Python Function Calling**: Access the power of Python directly within Open WebUI with native function calling. Easily integrate custom code to build unique features like custom RAG pipelines, web search tools, and even agent-like actions via a built-in code editor to seamlessly develop and integrate function code within the `Tools` and `Functions` workspace.
 
-- 🐍 **Python Code Execution**: Execute Python code locally in the browser via Pyodide with libraries like `requests`, `beautifulsoup4`, `numpy`, `pandas`, `seaborn`, `matplotlib`, `scikit-learn`, `scipy`, & `regex`.
+- 🐍 **Python Code Execution**: Execute Python code locally in the browser via Pyodide with a range of libraries, including `requests`, `beautifulsoup4`, `numpy`, `pandas`, `seaborn`, `matplotlib`, `scikit-learn`, `scipy`, and `regex`.
 
-- 🌊 **Mermaid Rendering**: Create beautiful diagrams and flowcharts directly within Open WebUI via [Mermaid Diagramming and charting tool](https://mermaid.js.org/intro/) syntax rendering.
+- 🌊 **Mermaid Rendering**: Create visually appealing diagrams and flowcharts directly within Open WebUI using the [Mermaid Diagramming and charting tool](https://mermaid.js.org/intro/), which supports Mermaid syntax rendering..
 
 ---
 
